<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsActivity">

    <TextView
        android:id="@+id/tvDetailsCity"
        android:text="@string/city_placeholder"
        android:textSize="@dimen/std_header"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:padding="@dimen/std_header_padding"/>
    <LinearLayout
        android:id="@+id/llLabels"
        android:layout_below="@id/tvDetailsCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/tvDay1"
            android:text="@string/day_1"
            android:textSize="@dimen/std_details"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvDay2"
            android:text="@string/day_2"
            android:textSize="@dimen/std_details"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvDay3"
            android:text="@string/day_3"
            android:textSize="@dimen/std_details"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvDay4"
            android:text="@string/day_4"
            android:textSize="@dimen/std_details"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvDay5"
            android:text="@string/day_5"
            android:textSize="@dimen/std_details"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvDay6"
            android:text="@string/day_6"
            android:textSize="@dimen/std_details"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/llLabels"
        android:id="@+id/llWeatherIcons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:id="@+id/ivDay1"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="@dimen/std_weather_icon"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/ivDay2"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="@dimen/std_weather_icon"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/ivDay3"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="@dimen/std_weather_icon"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/ivDay4"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="@dimen/std_weather_icon"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/ivDay5"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="@dimen/std_weather_icon"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/ivDay6"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="@dimen/std_weather_icon"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6"
        android:layout_below="@id/llWeatherIcons">

        <TextView
            android:id="@+id/tvTemp1"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/std_details"/>
        <TextView
            android:id="@+id/tvTemp2"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/std_details"/>
        <TextView
            android:id="@+id/tvTemp3"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/std_details"/>
        <TextView
            android:id="@+id/tvTemp4"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/std_details"/>
        <TextView
            android:id="@+id/tvTemp5"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/std_details"/>
        <TextView
            android:id="@+id/tvTemp6"
            android:layout_width="@dimen/std_no_dimen"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/std_details"/>

    </LinearLayout>

</RelativeLayout>